# cgnal-core

./: .buildinfo  .gitattributes  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: continous-delivery.yml  continous-integration.yml  github-page-build-and-deploy.yml
_sources/: index.rst.txt
_sources/api/: cgnal.core.config.rst.txt  cgnal.core.datasets.rst.txt  cgnal.core.rst.txt  cgnal.core.utils.rst.txt  core.data.model.rst.txt  core.logging.rst.txt  core.tests.rst.txt  core.typing.rst.txt
_sources/userguide/: index.rst.txt
api/: cgnal.core.config.html  cgnal.core.data.html  cgnal.core.data.layer.html  cgnal.core.data.layer.mongo.html  cgnal.core.data.layer.pandas.html  cgnal.core.data.model.html  cgnal.core.datasets.html  cgnal.core.html  cgnal.core.logging.html  cgnal.core.tests.html  cgnal.core.typing.html  cgnal.core.utils.html  cgnal.html  core.config.html  core.data.html  core.data.layer.html  core.data.layer.mongo.html  core.data.layer.pandas.html  core.data.model.html  core.html  core.logging.html  core.tests.html  core.typing.html  core.utils.html  modules.html
cgnal/core/: __init__.py  _version.py
cgnal/core/config/: __init__.py  (+1 more)
intro/: readme.html
requirements/: requirements.in  requirements.txt  requirements_ci.in  requirements_ci.txt
sphinx/source/: conf.py  index.rst
src/: __init__.py  _version.py
templates/: .gitattributes.tmpl  Dockerfile.tmpl  MANIFEST.in.tmpl  Makefile.tmpl  continous-delivery.yml.tmpl  continous-integration.yml.tmpl  github-page-build-and-deploy.yml.tmpl  setup.cfg.tmpl  source_index.rst.tmpl  userguide_index.rst.tmpl
templates/3.6/: requirements_ci.in
templates/3.8/: requirements_ci.in
templates/3.9/: requirements.in
tests/: __init__.py  test_config.py  test_data_layer_pandas_archivers.py  test_data_layer_pandas_dao.py  test_data_layer_pandas_databases.py  test_data_model_ml.py  test_data_model_text.py  test_datasets.py  test_iterables.py  test_logging.py  test_model_core.py  test_mongo_bindings.py  test_sample.py  test_utils.py
userguide/: index.html
(+54 files in other folders)
