[versioneer]
VCS = git
style = pep440
versionfile_source = cgnal/core/_version.py
versionfile_build = cgnal/core/_version.py
tag_prefix = v
parentdir_prefix = cgnal-core

[tool:pytest]
addopts = --doctest-modules --cov=./cgnal/core

[flake8]
exclude = versioneer.py,cgnal/core/_version.py
per-file-ignores =
    tests/*: D
    tests/test_utils.py: D, F601
    __init__.py:F401
ignore =
    # Ignored by black
    E203, E266, E501, W503,
    # Ignored to conform to PEP257
    D203, D212, D213, D214, D215, D404, D405, D406, D407, D408, D409, D410, D411, D413, D415, D416, D417,
    # Ignored to work with Sphinx
    RST303, RST304, RST307
# line length is intentionally set to 80 here because black uses Bugbear
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length for more details
max-line-length = 80
max-complexity = 18
select = B,C,D,E,F,W,T4,B9,RST

[sphinx]
package_dir = cgnal/core
name = cgnal-core

[mypy]

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-dill.*]
ignore_missing_imports = True

[mypy-cfg_load.*]
ignore_missing_imports = True

[mypy-bson.*]
ignore_missing_imports = True

[mypy-pymongo.*]
ignore_missing_imports = True

[metadata]
name = cgnal-core
url = https://github.com/CGnal/cgnal-core
author = CGnal s.r.l.
author_email = info@cgnal.com
description = A Python library of data structures optimized for machine learning tasks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_files = LICENSE

[options]
zip_safe=False
include_package_data = True
packages=find_namespace:
python_requires = ~=3.7

[options.package_data]
cgnal = core/py.typed

[options.packages.find]
exclude =
    tests*
    build*
    dist*
    sphinx*
    docs*
